--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <nav>
             <a href="#contact" class="image-link">
-        <img  src="images/My project.png" href="#" class="logo"></a>
+        <img  src="My project.png" href="#" class="logo"></a>
          <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href=  "#about">About</a></li> 
